--- a/gold.conf
+++ b/gold.conf
@@ -1,5 +1,6 @@
 rpcuser=goldrpc
-rpcpassword=HsBxa4tMhFfxfeW2TPWxJFqBnh4KGtUtRuuhoWRC7bCp
+rpcpassword=pleasechangethispassword
 addnode=23.95.9.118
 addnode=23.95.9.230
 addnode=23.95.9.231
+addnode=107.174.61.140
