edit smtp credentials

--- a/txbits/txbits/conf/common/securesocial.conf
+++ b/txbits/txbits/conf/common/securesocial.conf
@@ -19,12 +19,12 @@ securesocial {
 
 smtp {
     localhost=localhost
-    host=smtp.example.com
-    port=465
-    ssl=true
-    user="todo@fill.out"
-    password="yourpassword"
-    from="todo@fill.out"
+    host=smtp.mailgun.org
+    port=587
+    ssl=false
+    user="postmaster@mg.titan.gold"
+    password="d99bf02b28974243391903f832778f4b"
+    from="postmaster@mg.titan.gold"
 }
 
 securesocial {
