--- a/txbits/txbits/conf/common/application.conf
+++ b/txbits/txbits/conf/common/application.conf
@@ -12,7 +12,7 @@ reverseproxy=false
 
 wallet {
   bitcoin {
-    enabled=false
+    enabled=true
     node.ids=[0]
     node.0 {
       rpc {
@@ -35,7 +35,7 @@ wallet {
     }
   }
   gold {
-    enabled=false
+    enabled=true
     node.ids=[0]
     node.0 {
       rpc {
